[package]
name = "fwhiptroller"
version = "0.1.0"
authors = ["ImDarkDiamond <admin@arcanebot.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-model="0.3.7"
twilight-gateway="0.3.4"
twilight-http="0.3.8"

futures = "0.3"

tracing = "0.1"
tracing-subscriber = "0.2"

tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

dotenv = "0.15.0"